<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_Temp"
        android:icon="@drawable/ic_action_save"
        android:title="@string/TempSave"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_ClearAll"
        android:orderInCategory="100"
        android:title="@string/action_ClearAll"
        app:showAsAction="never"/>
</menu>
